# stash

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  design-reference.html  index.html  package-lock.json  package.json  stash-prd.md  tsconfig.json  vite.config.ts
.claude/agents/: deep-review-cross-table.md  deep-review-dead-reference.md  deep-review-guard-bypass.md  deep-review-protocol-conformance.md  deep-review-state-persistence.md  plan-feature-pattern.md  plan-feature-reuse.md  plan-feature-touch-points.md  refactor-complexity.md  refactor-coupling.md  refactor-duplication.md  refactor-size.md
.claude/commands/: deep-review.md  pr.md  refactor.md
.claude/skills/dnd-kit/: SKILL.md
.claude/skills/framer-motion/: SKILL.md
.claude/skills/react-use-effect/: SKILL.md
.claude/skills/tailwind-tokens/: SKILL.md
.claude/skills/tauri-v2/: SKILL.md
.claude/skills/typescript-best-practices/: SKILL.md
.github/workflows/: deploy-pwa.yml  release.yml
pwa/: index.html  manifest.json  sw.js
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  quick-add.json  quick-view.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/features/layout/: MainLayout.tsx  StatusBar.tsx  UpdateBanner.tsx  WaylandWarningBanner.tsx
src/services/: gistSync.ts  quickAddWindow.ts  quickViewWindow.ts  storage.ts  tray.ts  updateCheck.ts
src/services/__tests__/: storage.test.ts
src/shared/components/: ConfirmDialog.tsx
src/stores/: projectStore.ts  settingsStore.ts
src/types/: index.ts
(+21 files in other folders)
